# uniai-skills

./: CODEOWNERS  README.md
.agents/plugins/: marketplace.json
plugins/bigquery/: .mcp.json
plugins/bigquery/.codex-plugin/: plugin.json
plugins/canva/: .mcp.json
plugins/cloudflare/: .mcp.json
plugins/descript/: .mcp.json
plugins/engineering/: NOTICE.md
plugins/figma/: .mcp.json
plugins/finance/: NOTICE.md
plugins/github/: .mcp.json
plugins/heygen/: .mcp.json
plugins/legal-docs/: NOTICE.md
plugins/linear/: .mcp.json
plugins/motherduck/: .mcp.json
plugins/motherduck/skills/motherduck-build-data-pipeline/references/dlt-dbt-motherduck-project/: .env.example  .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
plugins/motherduck/skills/motherduck-build-data-pipeline/references/dlt-dbt-motherduck-project/data/: customers.jsonl  orders.jsonl
plugins/motherduck/skills/motherduck-build-data-pipeline/references/dlt-dbt-motherduck-project/models/marts/: fct_customer_revenue.sql  marts.yml
plugins/motherduck/skills/motherduck-build-data-pipeline/references/dlt-dbt-motherduck-project/models/staging/: sources.yml  staging.yml  stg_customers.sql  stg_orders.sql
plugins/motherduck/skills/motherduck-build-data-pipeline/references/dlt-dbt-motherduck-project/pipeline/: bootstrap.py  cleanup.py  load_raw.py  run_all.py  settings.py  validate.py
plugins/notion/: .mcp.json
plugins/remotion/: .mcp.json
plugins/research-academic/: NOTICE.md
plugins/runway/: .mcp.json
plugins/slack/: .mcp.json
skills/uniai-cli/: SKILL.md
(+133 files in other folders)
