[project]
name = "dlt-dbt-motherduck-project"
version = "0.1.0"
description = "Minimal end-to-end MotherDuck pipeline reference using dlt and dbt."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-duckdb==1.10.1",
    "dlt[motherduck]==1.24.0",
    "duckdb==1.5.1",
]

[tool.uv]
package = false
